<resources>
    <string name="app_name">Personal Form</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="address">Address</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="submit">Submit</string>
    <string name="enter_date">Enter date</string>
    <string name="gender">Gender</string>
</resources>